PortalPackage/ Enrollment Rx Core/objects/Initiative_Members__c.object
<CustomObject>
    <description>ERx Custom Object - link object designed to associate Contacts to an ERx Marketing Initiative</description>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Lookup to the Contact&apos;s &quot;Contact Status&quot; field.</description>
        <formula>Initiative_Member__r.Contact_Status__c</formula>
        <inlineHelpText>Lookup to the Contact&apos;s &quot;Contact Status&quot; field.</inlineHelpText>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <label>Event Attended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_RSVP__c</fullName>
        <label>Event RSVP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiative_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Initiative Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Initiatives Related to this Contact</relationshipLabel>
        <relationshipName>R00N80000002jrGQEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invitation_Status__c</fullName>
        <description>ERx Custom Field</description>
        <label>Invitation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Initiative__c</fullName>
        <description>ERx Custom Field</description>
        <label>Marketing Initiative</label>
        <referenceTo>Marketing_Initiatives__c</referenceTo>
        <relationshipLabel>Initiative Members</relationshipLabel>
        <relationshipName>R00N80000002jrFvEAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Initiative Member</label>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>IM ID #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>